--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,3 +1,122 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    font: 15px/1.5 Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: #f4f4f4;
 }
+.container{
+    width: 90%;
+    margin: auto;
+    overflow: hidden;
+}
+
+
+/* Homepage Header */
+.hpgHeader{
+    background: #35424a;
+    color: #ffffff;
+    padding-top: 30px;
+    min-height: 70px;
+    border-bottom: #4caf50 3px solid;
+}
+
+#hpgHBtns{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    float: right;
+}
+
+#hpgBtnLogIn{
+    background-color: #4caf50;
+    border: none;
+    color: #ffffff;
+    padding: 15px 32px;
+    margin: 0 20px 10px 20px;
+
+}
+#hpgBtnLogIn:hover{
+    opacity: 70%;
+}
+
+#hpgBtnReg{
+    background-color: #FFFFFF;
+    border: #4caf50 2px solid;
+    color: #4caf50;
+    padding: 15px 32px;
+    margin: 0 20px 10px 20px;
+}
+#hpgBtnReg:hover{
+    opacity: 70%;
+}
+
+.hpgHeadTitle{
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 32px;
+}
+
+
+/* Homepage Showcase */
+#hpgShowCon{
+    min-height: 800px;
+    display: flex;
+}
+#hpgShowcase{
+    background: url('../images/show_wel01.jpg') no-repeat;
+    background-size: 100% 100%;
+
+    width: 50%;
+    height: 800px;
+}
+#hpgShowcase h1{
+    margin: 400px 0 250px 0;
+    vertical-align: middle;
+    text-align: center;
+    color: #FFFFFF;
+}
+#hpgButtons{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+}
+#hpgLogIn{
+    background-color: #FFFFFF;
+    border: #4caf50 2px solid;
+    color: #4caf50;
+    padding: 15px 32px;
+    width: 200px;
+    margin: 20px;
+}
+#hpgReg{
+    background-color: #4caf50;
+    border: none;
+    color: #FFFFFF; 
+    padding: 15px 32px;
+    width: 200px;
+    margin: 20px;
+}
+#hpgLogIn:hover{
+    opacity: 70%;
+    background-color: #bdbdbd;
+}
+#hpgReg:hover{
+    opacity: 70%;
+    background-color: #bdbdbd;
+}
+#hpgJoin{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+/* Homepage Footer */
+/* .hpgFooter{
+    min-height: 100px;
+} */
