--- a/register.css
+++ b/register.css
@@ -42,18 +42,19 @@ footer {
 .box1 {
     background-color: white;
     text-align: center;
-    height: 380px;
+    height: 500px;
     width: 400px;
-    margin-top: -70px;
+    margin-top: -90px;
     margin-left: auto;
     margin-right: auto;
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 30px;
     color: rgb(83, 83, 83);
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 10px;
+    margin-right: 200px;
 }
 
 .textbox {
@@ -79,18 +80,11 @@ h1 {
     font-size: 18px;
     border: 2px solid rgb(9, 57, 88);
     cursor: pointer;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .btn:hover{
     background-color: rgb(12, 71, 110);
-}
-
-.loggedin {
-    font-size: 13px;
-    color: rgb(77, 76, 76);
-    margin-left: 0px;
-    margin-top: 5px;
 }
 
 a {
@@ -100,11 +94,6 @@ a {
     text-decoration: none;
     margin-left: 50px;
     margin-top: 50px;
-}
-
-a:hover {
-    color: rgb(4, 0, 255);
-    font-weight: bold;
 }
 
 p {
@@ -119,18 +108,19 @@ p {
     padding-top: 15px;
 }
 
-.newaccount {
+.existingaccount {
     font-size: 14px;
+    margin-top: 150px;
 }
 
-.signup{
+.signin{
     font-size: 14px;
     margin-left: 3px;
 }
 
 .info {
     text-align: center;
-    margin-top: -10px;
+    margin-top: 80px;
     font-size: 16px;
     color: white;
     border: 1px solid white; 
@@ -152,7 +142,53 @@ img {
     margin-top: -80px;
 }
 
-.signup:hover {
+.or {
+    font-size: 14px;
+    margin-top: -150px;
+}
+
+.google {
+    width: 30%;
+    background: none;
+    font-size: 16px;
+    border: 1px solid black;
+    cursor: pointer;
+    height: 40px;
+    margin-left: -10px;
+    text-align: right;
+    position: relative;
+    margin-top: 10px;
+    background-image: url(images/google.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 30%;
+}
+
+.facebook {
+    width: 30%;
+    background: none;
+    font-size: 14px;
+    border: 1px solid black;
+    cursor: pointer;
+    height: 40px;
+    margin-left: 40px;
+    text-align: right;
+    position: relative;
+    background-image: url(images/facebook.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 35%;
+}
+
+.google:hover {
+    border: 2px solid black;
+}
+
+.facebook:hover {
+    border: 2px solid black;
+}
+
+.signin:hover {
     color: rgb(4, 0, 255);
     font-weight: bold;
 }
