--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -119,3 +119,79 @@ body{
 .ftrLnks a{
     color: #000000;
 }
+
+/* Main Page Navigation */
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #4caf50;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+  
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #ffffff;
+    display: block;
+    transition: 0.3s;
+}
+  
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+  
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    left: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+#main {
+    transition: margin-right .5s;
+}
+
+  /* Posts */
+#post{
+      margin: 20px;
+      border: 1px #9c9c9c solid;
+      border-radius: 5px;
+}
+#post h3{
+    max-width: 150px;
+    display: inline;
+    vertical-align: middle;
+}
+#pp{
+    margin: 10px;
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    box-shadow: 6px 5px 5px 0px rgba(118,115,115,0.75);
+    -webkit-box-shadow: 6px 5px 5px 0px rgba(118,115,115,0.75);
+    -moz-box-shadow: 6px 5px 5px 0px rgba(118,115,115,0.75);  
+    /* border: 0.15px solid #000000; */
+    display: inline;
+    vertical-align: middle;
+}
+#post p{
+    padding: 10px;
+    margin: 5px;
+}
+.attImg{
+    box-shadow: none;
+    border: 0.25px solid #9c9c9c;
+    display: block;
+    border-radius: 5px;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width: 90%;
+}
