--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -56,4 +56,33 @@
     font-weight: bold;
     color: #000000;
 }
-/* Homepage Footer */
+/* Post Layout */
+.attImg{
+    margin: auto;
+    width: 40%;
+}
+.pstInteract{
+    padding: 5px 20px 5px 20px;
+    margin: 2px;
+    display: flex;
+    justify-content: left;
+    
+}
+.pstInteract > img{
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+}
+#mainCount{
+    vertical-align: middle;
+    margin-right: 40px;
+}
+#dat{
+    font-size: 12px;
+    width: auto;
+}
+.mainContent{
+    width: 80%;
+    margin: auto;
+    padding: 0 32px 0 32px
+}
