--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -194,4 +194,76 @@ body{
     margin-bottom: 10px;
     margin-top: 10px;
     width: 90%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.pstInteract{
+    padding: 5px 20px 5px 20px;
+    margin: 2px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.pstInteract > img{
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+}
+#mainCount{
+    vertical-align: middle;
+}
+#dat{
+    font-size: 12px;
+    width: 100%;
+    text-align: center;
+}
+
+/* popout image - https://www.w3schools.com/howto/howto_css_modal_images.asp*/
+.popouts{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    background-color: #000000;
+    background-color: #00000094; 
+}
+.popoutImg{
+    margin: auto;
+    display: block;
+    width: 70%;
+}
+.popoutImg{
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+@-webkit-keyframes zoom{
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+@keyframes zoom{
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+.closeBtn{
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #FFFFFF;
+    font-size: 50px;
+    transition: 0.3s;
+}
+.closeBtn:hover,
+.closeBtn:focus{
+    color: #f4f4f4;
+    cursor: pointer;
 }
