--- a/styles/accessibility.css
+++ b/styles/accessibility.css
@@ -3,6 +3,6 @@ body {
     font-size: 16px !important;
 }
 
-body > *, span, button {
+body > *, span, button, a {
     font-size: 150% !important;
 }
