add text enlarge to all pages. needs styling

--- a/styles/text-enlarge.css
+++ b/styles/text-enlarge.css
@@ -3,6 +3,6 @@ body {
     font-size: 16px !important;
 }
 
-body > *, span, button, a {
+body > *, span, button, a, input {
     font-size: 150% !important;
 }
