style text enlarge to fill all pages

--- a/forgotpassword.css
+++ b/forgotpassword.css
@@ -112,6 +112,11 @@ h1 {
     margin-left: 250px;
 }
 
+.info #enlarge-button {
+    text-decoration: none;
+    color: white;
+}
+
 img {
     height: 80px;
     width: 100px;
