--- a/login.css
+++ b/login.css
@@ -93,6 +93,7 @@ h1 {
     margin-top: 5px;
 }
 
+/* Not needed and breaks some other styling
 a {
     color: rgb(45, 45, 255);
     font-family: Arial, Helvetica, sans-serif;
@@ -100,7 +101,7 @@ a {
     text-decoration: none;
     margin-left: 50px;
     margin-top: 50px;
-}
+}*/
 
 a:hover {
     color: rgb(4, 0, 255);
@@ -136,6 +137,11 @@ p {
     border: 1px solid white; 
     width: 500px;
     margin-left: 250px;
+}
+
+.info #enlarge-button {
+    text-decoration: none;
+    color: white;
 }
 
 img {
