--- a/register.css
+++ b/register.css
@@ -87,6 +87,7 @@ h1 {
     background-color: rgb(12, 71, 110);
 }
 
+/* Not needed and breaks some other styling
 a {
     color: rgb(45, 45, 255);
     font-family: Arial, Helvetica, sans-serif;
@@ -94,7 +95,7 @@ a {
     text-decoration: none;
     margin-left: 50px;
     margin-top: 50px;
-}
+}*/
 
 p {
     font-size: 13px;
@@ -126,6 +127,11 @@ p {
     border: 1px solid white; 
     width: 500px;
     margin-left: 250px;
+}
+
+.info #enlarge-button {
+    text-decoration: none;
+    color: white;
 }
 
 img {
