--- a/resetpassword.css
+++ b/resetpassword.css
@@ -97,6 +97,11 @@ h1 {
     margin-left: 250px;
 }
 
+.info a {
+    text-decoration: none;
+    color: white;
+}
+
 img {
     height: 80px;
     width: 100px;
